--- a/estilo/style.css
+++ b/estilo/style.css
@@ -55,6 +55,8 @@ header p {
 }
 
 nav {
+    margin: auto;
+    margin-top: 3px;
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
