--- a/estilo/style.css
+++ b/estilo/style.css
@@ -45,18 +45,16 @@ header h1 {
 header p {
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
-    max-width: 500px;
+    max-width: 600px;
     margin: auto;
-    margin-bottom: 20px;
     color: white;
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.397);
 }
 
 nav {
-    margin: auto;
-    margin-top: 3px;
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
